# ObjectOrientedProgramming

./: AbstractEmployee.cpp  AbstractEmployee.h  CMakeLists.txt  Developer.cpp  Developer.h  Employee.cpp  Employee.h  Teacher.cpp  Teacher.h  main.cpp
